# mimic_grasping_api

./: .gitignore  CMakeLists.txt  ISSUE.md  README.md  mimic_grasping_server.pc.in
ConfigFiles/: foo.pc.in
configs/: general.json  localization_config.json  plugin_object_localization_ros.json  plugin_phoxi_cam_object_localization_ros.json  plugin_tool_localization_6dmimic.json  saving_tests.json  tool_firmware_config.json
configs/default/: calib_matrix.json  localization_config.json  localization_config_double_OR.json  oi.json  plugin_object_localization_ros.json  plugin_object_localization_ros_2.json  plugin_phoxi_cam_object_localization_ros.json  plugin_tool_localization_6dmimic (copy).json  plugin_tool_localization_6dmimic.json  test_firm.json  test_loc.json  tool_firmware_config.json
configs/home/: localization_config.json  plugin_tool_localization_6dmimic.json  tool_firmware_config.json
configs/iilab/: localization_config.json  plugin_phoxi_cam_object_localization_ros.json  plugin_tool_localization_6dmimic.json  tool_firmware_config.json
configs/iilab - ethernet/: plugin_phoxi_cam_object_localization_ros.json  plugin_tool_localization_6dmimic.json
configs/iilab - inesctecrobotics - wifi/: plugin_tool_localization_6dmimic.json
configs/iilab_inesctecrobotics_angular_groundtruth/: calib_matrix_p3.json  localization_config.json  plugin_object_localization_ros.json  plugin_phoxi_cam_object_localization_ros.json
configs/iilab_inesctecrobotics_knee_tube/: localization_config.json  plugin_phoxi_cam_object_localization_ros.json
configs/iilab_inesctecrobotics_linear_groundtruth/: general_error_compensation.json  general_profile_config.json  localization_config.json  tool_firmware_config.json
configs/iilab_inesctecrobotics_triangle_bracket/: plugin_phoxi_cam_object_localization_ros.json
configs/iilab_inesctecrobotics_wifi/: calib_matrix.json  error_compensation.json  general_error_compensation.json  localization_config.json  plugin_phoxi_cam_object_localization_ros.json  plugin_tool_localization_6dmimic.json  tool_error_compensation.json  tool_firmware_config.json
docs/: tests
docs/use_case_6dmimic_OR/: README.md  calibrations.md  changing_tool.md  error_compensation.md  testing_results.md
examples/: firmware_interface.cpp
include/mimic_grasping_api/: dataset_manipulator.h  error_compensation.h  localization_base.h  localization_interface.h  mimic_grasping_server.h  tool_firmware_interface.h
include/mimic_grasping_server/: localization_base.h  localization_interface.h  mimic_grasping_server.h  pose.h  tool_firmware_interface.h
include/plugins/: foo.h  obj_localization_ros.h
install_configurations/: ht_manipulation.pc.in  obj_localization_ros.pc.in
libs/: README.md
outputs/: dataset_test.json  dataset_test.yaml  grasping_poses.json  grasping_poses.yaml  object_poses.json  object_poses.yaml
outputs/2f_linear_gt_final_tests/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_pitch_01/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_pitch_02/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_pitch_03/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_pitch_05/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_roll_01/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_roll_02/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_roll_03/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_roll_04/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_roll_05/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
outputs/angular_yaw_asses_01/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  (+3 more)
outputs/angular_yaw_asses_01+15/: grasping_poses.csv  grasping_poses.json  grasping_poses.yaml  object_poses.csv  object_poses.json  object_poses.yaml  raw_grasping_poses.csv  raw_grasping_poses.json  raw_grasping_poses.yaml
scripts/: obj_localization_ros.sh  obj_localization_ros_2_init.sh  obj_localization_ros_close.sh  obj_localization_ros_init.sh  phoxi_cam_obj_localization_ros_angular_gt_init.sh  phoxi_cam_obj_localization_ros_close.sh  phoxi_cam_obj_localization_ros_init.sh  phoxi_cam_obj_localization_ros_knee_tube_init.sh  phoxi_cam_obj_localization_ros_linear_gt_init.sh  setup_hearbit.sh  tool_localization_6dmimic_close.sh  tool_localization_6dmimic_init.sh  tool_localization_6dmimic_tester_close.sh  tool_localization_ros_close.sh  tool_localization_ros_init.sh
src/: mgs_serial.cpp  mimic_grasping_server.cpp  tool_firmware_interface.cpp
(+664 files in other folders)
